--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ section{
 .half-width{
     width: 50%;
     padding: 3%;
+    text-align: justify;
 }
 .half-width img{
     width: 80%
@@ -29,4 +30,9 @@ section{
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
